# BachelorPraktikum23

./: 3DTK_1  Bearbeitete US in Iterationen.md  User_Stories.rar  qs.md
.obsidian/: workspace.json
Reviews/: Peer review & Coding Buddy.md
US_CSV/: User_Story_10.CSV  User_Story_15.CSV  User_Story_17.CSV  User_Story_2.CSV  User_Story_21.CSV  User_Story_22.CSV  User_Story_23.CSV  User_Story_27.CSV  User_Story_33.CSV  User_Story_35.CSV  User_Story_4.CSV  User_Story_5.CSV  User_Story_6.CSV  User_Story_7.CSV  User_Story_8.CSV
User_Stories_CSV/: User_Story_0.CSV  User_Story_1.CSV  User_Story_11.CSV  User_Story_18.CSV  User_Story_25.CSV  User_Story_26.CSV  User_Story_32.CSV
Wiki/: Wie benutzt man das Programm.md  overview.md  removert_overview.md
best_practices/: documentation.md  style_guidelines.md
bp_tests/: json.py  main.py
k/: json.py  main.py
protokolle/: Protokoll.md  Protokoll_2_Termin_15-11-23.md  Protokoll_3_Termin_29-11-23.md  Protokoll_4_Termin_19-12-23.md  Protokoll_5_Termin_11-01-24.md  Protokoll_6_Termin_22-1-24.md  (+2 more)
versions/it2/dynamic_rail_map/scan_reframer/: CMakeLists.txt
versions/it2/dynamic_rail_map/scan_reframer/include/: distance_filtering.hpp  frame_exporter.hpp  logger.hpp  reframer.hpp  transform_conversion.hpp  types.hpp  unbagger.hpp
versions/it2/dynamic_rail_map/scan_reframer/source/: distance_filtering.ipp  frame_exporter.cpp  main.cpp  reframer.cpp  unbagger.cpp  unbagger.ipp
versions/it2/dynamic_rail_map/scan_reframer/tests/: CMakeLists.txt
versions/it2/dynamic_rail_map/scan_reframer/tests/include/: logger_test_util.hpp
versions/it3/dynamic_rail_map/scan_reframer/: CMakeLists.txt
versions/it3/dynamic_rail_map/scan_reframer/include/helpers/: ros_point_field_helpers.hpp  transform_conversion.hpp
versions/it3/dynamic_rail_map/scan_reframer/include/modules/: distance_filtering.hpp  frame_exporter.hpp  unbagger.hpp
versions/it3/dynamic_rail_map/scan_reframer/include/util/: logger.hpp
versions/it3/dynamic_rail_map/scan_reframer/source/: main.cpp
versions/it3/dynamic_rail_map/scan_reframer/source/helpers/: safe_rosbag.ipp  transform_conversion.ipp
versions/it3/dynamic_rail_map/scan_reframer/source/modules/: distance_filtering.ipp  frame_exporter.cpp  reframer.cpp  unbagger.cpp  unbagger.ipp
versions/it3/dynamic_rail_map/scan_reframer/tests/: CMakeLists.txt
versions/it3/dynamic_rail_map/scan_reframer/tests/include/: logger_test_util.hpp
versions/it3/dynamic_rail_map/scan_reframer/tests/source/: logger_test.cpp
versions/it4/dynamic_rail_map/scan_reframer/tests/: CMakeLists.txt
versions/it5/dynamic_rail_map/scan_reframer/: CMakeLists.txt
versions/it5/dynamic_rail_map/scan_reframer/include/: types.hpp
versions/it5/dynamic_rail_map/scan_reframer/include/helpers/: transform_conversion.hpp
versions/it5/dynamic_rail_map/scan_reframer/include/modules/: chunk_exporter.hpp  metadata.hpp  unbagger.hpp
versions/it5/dynamic_rail_map/scan_reframer/include/util/: logger.hpp
versions/it5/dynamic_rail_map/scan_reframer/source/: main.cpp
versions/it5/dynamic_rail_map/scan_reframer/source/modules/: frame_exporter.cpp  lord_tachunker.cpp  unbagger.ipp
versions/it5/dynamic_rail_map/scan_reframer/tests/source/: ros_time_conversion_test.cpp
versions/it7/dynamic_rail_map/kitti2pcd/: .clang-format  CMakeLists.txt  README.md
versions/it7/dynamic_rail_map/kitti2pcd/include/: converter.hpp
versions/it7/dynamic_rail_map/kitti2pcd/source/: converter.cpp  converter.ipp  main.cpp
versions/it7/dynamic_rail_map/scan_combiner/: .gitignore  CMakeLists.txt  README.md
versions/it7/dynamic_rail_map/scan_combiner/include/components/: chunker.hpp  distance_filtering.hpp  metadata.hpp  reframer.hpp  scan_combiner_pipeline.hpp  unbagger.hpp
versions/it7/dynamic_rail_map/scan_combiner/include/config/: default_parameters.hpp  types.hpp  version.hpp
versions/it7/dynamic_rail_map/scan_combiner/include/helpers/: ros_time_conversion.hpp  safe_rosbag.hpp  transform_conversion.hpp
versions/it7/dynamic_rail_map/scan_combiner/include/module_interfaces/: frame_exportation.hpp  metadata_transcoding.hpp  point_cloud_parsing.hpp
versions/it7/dynamic_rail_map/scan_combiner/include/modules/frame_exporters/: kitti.hpp  uos.hpp
versions/it7/dynamic_rail_map/scan_combiner/include/modules/metadata_transcoders/: json.hpp
versions/it7/dynamic_rail_map/scan_combiner/include/modules/point_cloud_parsers/: velodyne_lidar.hpp
versions/it7/dynamic_rail_map/scan_combiner/include/util/: apply_at_index.hpp  balanced_segments.hpp  barrier.hpp  fixed_segments.hpp  pipeline_buffer.hpp  unique_enum_type.hpp
versions/it7/dynamic_rail_map/scan_combiner/source/: main.cpp
versions/it7/dynamic_rail_map/scan_combiner/source/components/: chunker.cpp  distance_filtering.ipp  metadata.cpp  reframer.cpp  scan_combiner_pipeline.cpp  unbagger.cpp  unbagger.ipp
versions/it7/dynamic_rail_map/scan_combiner/source/helpers/: ros_point_field_helpers.ipp  transform_conversion.ipp
versions/it7/dynamic_rail_map/scan_combiner/source/module_interfaces/: frame_exportation.ipp  metadata_transcoding.ipp  point_cloud_parsing.ipp
versions/it7/dynamic_rail_map/scan_combiner/source/module_registration/: frame_exporter_registration.ipp  metadata_transcoder_registration.ipp  point_cloud_parser_registration.ipp
versions/it7/dynamic_rail_map/scan_combiner/source/modules/frame_exporters/: kitti.cpp  uos.cpp
versions/it7/dynamic_rail_map/scan_combiner/source/modules/metadata_transcoders/: json.cpp
versions/it7/dynamic_rail_map/scan_combiner/source/modules/point_cloud_parsers/: velodyne_lidar.ipp
versions/it7/dynamic_rail_map/scan_combiner/test_result-bad/: 4118.dataLim  test_result-bad.vtune
versions/it7/dynamic_rail_map/scan_combiner/test_result-bad/config/: collection.cfg  context_values.cfg  runss.options
versions/it7/dynamic_rail_map/scan_combiner/tests/: CMakeLists.txt
versions/it7/dynamic_rail_map/scan_combiner/tests/source/: arx_test.cpp  distance_filtering_test.cpp  frame_exporter_test.cpp  logger_test.cpp  metadata_json_test.cpp  transform_conversion_test.cpp
(+226 files in other folders)
